<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <artifactId>learn</artifactId>
        <groupId>com.billow</groupId>
        <version>4.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>learn-shop-admin-system</artifactId>
    <packaging>jar</packaging>

    <name>learn-shop-admin-system</name>
    <url>http://maven.apache.org</url>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-common</artifactId>
        </dependency>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-workflow</artifactId>
        </dependency>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-email</artifactId>
        </dependency>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-job</artifactId>
        </dependency>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-mybatis</artifactId>
        </dependency>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-redis</artifactId>
        </dependency>
        <!-- 消息中间件、消息通知 -->
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-notice</artifactId>
        </dependency>
        <dependency>
            <groupId>com.billow</groupId>
            <artifactId>learn-shop-base-excel</artifactId>
        </dependency>
        <!-- 配置中心获取端 -->
        <dependency>
            <groupId>com.alibaba.cloud</groupId>
            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.httpcomponents</groupId>
                    <artifactId>httpclient</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.httpcomponents</groupId>
                    <artifactId>httpcore</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
        </dependency>
        <!--配置命名容错处理-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <!-- 负载均衡 loadbalancer -->
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-loadbalancer</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <!-- Spring Boot 打包插件 -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- 编译插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <!-- docker -->
            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <configuration>
                    <dockerDirectory>src/main/docker</dockerDirectory>
                    <resources>
                        <resource>
                            <targetPath>/</targetPath>
                            <directory>${project.build.directory}</directory>
                            <include>${project.build.finalName}.jar</include>
                        </resource>
                    </resources>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <!-- 建议添加groupId和明确版本号 -->
                <groupId>org.apache.maven.plugins</groupId>
                <!-- 绑定mvn package命令，执行package时将target目录下的jar包复制到docker目录 -->
                <executions>
                    <execution>
                        <phase>package</phase>
                        <configuration>
                            <!-- 将tasks改为target -->
                            <target>
                                <copy todir="src/main/docker"
                                      file="target/${project.artifactId}.${project.packaging}"></copy>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
